--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "swiper": "^11.0.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
     "@types/node": "^20.10.6",
