--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-i18next": "^15.1.1",
     "react-intersection-observer": "^9.5.3",
     "react-spring": "^9.7.3",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "valtio": "^2.1.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
