--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i18next": "^24.0.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
+    "lodash": "^4.17.21",
     "next": "^15.0.3",
     "next-i18next": "^15.4.0",
     "react": "^18.2.0",
